--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://level-up.arnaudbos.com"
+baseurl = "http://level-up.arnaudbos.com/"
 languageCode = "en-US"
 title = "Arnaud Bos"
 # Enable comments by entering your Disqus shortname
